the final commit

--- a/09_Angular/app-usuarios/src/app/app.component.html
+++ b/09_Angular/app-usuarios/src/app/app.component.html
@@ -3,3 +3,4 @@
 <h2>componente raiz</h2>
 <app-menu></app-menu>
 <app-nueva-cuenta>No funciona de momento la cuenta nueva</app-nueva-cuenta>
+<app-lista-cuentas></app-lista-cuentas>
